# SuzukiKatsuma.github.io

./: Cargo.toml  README.md  index-4ea642491301e59f.js  index-4ea642491301e59f_bg.wasm  index-865f8bfe38432d7f.js  index-865f8bfe38432d7f_bg.wasm  index-97468c7306cd995.js  index-97468c7306cd995_bg.wasm  index-98a3418d6ea2f884.js  index-98a3418d6ea2f884_bg.wasm  index.html  style-24c2924266284d6a.css  style-25a4c9bc0fd1c696.css  style-59cd031c51102020.css  style-5bdaa4e7061065d7.css  style-5f6af51b40cffdfc.css  style-75a73c60efd9d398.css  style-a150e8895089a0bc.css  style-a4390c1312ccee22.css  style-d19323c7c3e6bc62.css  style-d3a4a9ff20e94dd7.css  suzuki_katsuma_github_io-2ba42ca244e6d8d1.js  suzuki_katsuma_github_io-2ba42ca244e6d8d1_bg.wasm  suzuki_katsuma_github_io-34937d111f8c0a4f.js  suzuki_katsuma_github_io-34937d111f8c0a4f_bg.wasm  suzuki_katsuma_github_io-3876e41225c79e20.js  suzuki_katsuma_github_io-3876e41225c79e20_bg.wasm  suzuki_katsuma_github_io-4ba1d11c7e56cf59.js  suzuki_katsuma_github_io-4ba1d11c7e56cf59_bg.wasm  suzuki_katsuma_github_io-9ee0272cf05a19de.js  suzuki_katsuma_github_io-9ee0272cf05a19de_bg.wasm  suzuki_katsuma_github_io-9f9637b8f4988337.js  suzuki_katsuma_github_io-9f9637b8f4988337_bg.wasm
public/: index.html
src/: main.rs  style.scss
src/components/: dead_end.rs  mod.rs  profile.rs  projects.rs  research.rs  works.rs
src/components/common/: icon_link.rs  mod.rs
src/styles/: _breakpoints.scss  dead-end.scss  profile.scss  projects.scss  research.scss  works.scss
