[package]
name = "suzuki_katsuma_github_io"
version = "0.1.0"
authors = ["SuzukiKatsuma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4"
wasm-logger = "0.2.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
